docs/pages/versions/v55.0.0/sdk/ui/swift-ui/divider.mdx
---
title: 分隔线
description: 一个用于创建视觉分隔符的 SwiftUI Divider 组件。
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI Divider 与官方 SwiftUI [Divider API](https://developer.apple.com/documentation/swiftui/divider) 保持一致，并在内容之间创建一个视觉分隔符。

## 安装

<APIInstallSection />

## 用法

### 基础分隔线

```tsx BasicDividerExample.tsx
import { Host, Divider, VStack, Text } from '@expo/ui/swift-ui';

export default function BasicDividerExample() {
  return (
    <Host matchContents>
      <VStack>
        <Text>第一部分</Text>
        <Divider />
        <Text>第二部分</Text>
      </VStack>
    </Host>
  );
}
```

### 列表中的分隔线

```tsx DividerInListExample.tsx
import { Host, Divider, VStack, Text } from '@expo/ui/swift-ui';

export default function DividerInListExample() {
  return (
    <Host matchContents>
      <VStack spacing={8}>
        <Text>项目 1</Text>
        <Divider />
        <Text>项目 2</Text>
        <Divider />
        <Text>项目 3</Text>
        <Divider />
        <Text>项目 4</Text>
      </VStack>
    </Host>
  );
}
```

### 上下文菜单中的分隔线

分隔线通常用于在上下文菜单中分隔不同组的操作。

```tsx DividerInContextMenuExample.tsx
import { Host, ContextMenu, Button, Text, Divider } from '@expo/ui/swift-ui';

export default function DividerInContextMenuExample() {
  return (
    <Host matchContents>
      <ContextMenu>
        <ContextMenu.Items>
          <Button label="编辑" onPress={() => console.log('Edit')} />
          <Button label="复制" onPress={() => console.log('Duplicate')} />
          <Divider />
          <Button label="删除" role="destructive" onPress={() => console.log('Delete')} />
        </ContextMenu.Items>
        <ContextMenu.Trigger>
          <Text>长按我</Text>
        </ContextMenu.Trigger>
      </ContextMenu>
    </Host>
  );
}
```

## API

```tsx
import { Divider } from '@expo/ui/swift-ui';
```

<APISection packageName="expo-ui/swift-ui/divider" apiName="Divider" />
